--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/NOTE.png
+    - asset/mesah.jpg
 
 flutter_icons:
   android: true
